--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@
     height: 100%;
     margin-top: 45px;
     background: var(--bs-white);
-    box-shadow: 0 0 45px rgba(0, 0, 0, .05);
+    box-shadow: 0 0 45px rgb(108, 17, 172);
 }
 
 .service .service-inner::before {
@@ -359,7 +359,7 @@
     left: 0;
     bottom: 0;
     transition: 1s;
-    background: var(--bs-primary);
+    background: var(--bs-secondary);
 }
 
 .service .service-inner:hover::before {
@@ -398,7 +398,7 @@
 /*** Team ***/
 .team .team-item {
     background: var(--bs-white);
-    box-shadow: 0 0 45px rgba(0, 0, 0, .05);
+    box-shadow: 0 0 45px rgba(71, 17, 128, 0.696);
 }
 
 .team .team-item .team-social {
@@ -408,7 +408,7 @@
     top: 0;
     right: 0;
     transition: .5s;
-    background: var(--bs-primary);
+    background: var(--bs-secondary);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -491,7 +491,7 @@
 .testimonial-carousel .owl-nav .owl-prev,
 .testimonial-carousel .owl-nav .owl-next {
     margin-right: 15px;
-    color: var(--bs-primary);
+    color: var(--bs-purple);
     font-size: 45px;
     transition: .5s;
 }
@@ -552,12 +552,12 @@
     content: "\f105";
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
-    color: var(--bs-primary);
+    color: var(--bs-purple);
     margin-right: 10px;
 }
 
 .footer .btn.btn-link:hover {
-    color: var(--bs-primary);
+    color: var(--bs-purple);
     letter-spacing: 1px;
     box-shadow: none;
 }
